[tool.poetry]
name = "blah"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
types-redis = "^0.1.3"
redis = "^3.5"
typing_extensions = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.812.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
